changed title name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Tiny's Adventure - Flappy Bird Style Game</title>
+    <title>Tiny's Adventure in rainbow valley</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
